--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -22,6 +22,15 @@
 
   // Night Events ("Governor's Message") - Governor
   "nightEvents.title": "Governor's Message",
+  "nightEvents.Meteorite.opening": "Fellow citizens, the Republic Warning Service has informed me that a meteor shower will reach its peak over our region tonight.",
+  "nightEvents.Meteorite.reaction": "I urge you to remain safely in your homes all night. The view can be enjoyed from your windows. Please report any meteorite impacts to your local authorities.",
+  "nightEvents.Meteorite.closing": "I wish you all a safe and enjoyable evening.",
+  "nightEvents.StrangeCapsule.opening": "Fellow citizens, rumors have been circulating about extraterrestrial activity in the skies over our region tonight.",
+  "nightEvents.StrangeCapsule.reaction": "I can assure you that this is nonsense. Aliens do not exist. You have not heard any rumors. I am one of you. Everything is fine. THE OFFSPRING ARE FINE.",
+  "nightEvents.StrangeCapsule.closing": "*ahem* I wish you all a normal and human evening.",
+  "nightEvents.NewYear.opening": "Fellow citizens, we have come to the end of another successful year for our region and the entire Ferngill Republic.",
+  "nightEvents.NewYear.reaction": "I congratulate our industries on their ever-improving production, particularly the excellent crops from Stardew Valley.",
+  "nightEvents.NewYear.closing": "I wish you all a prosperous new year.",
 
   // Shopping ("Shop the Valley") - Lewis
   "shopping.title": "Shop the Valley",
