Implement basic interactions with Scrying Orbs.
* ScryingOrb/Experience.cs:
  - Add base class for orb experiences.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Add experience for a week of unlimited orb use.

* ScryingOrb/Experiences/NothingExperience.cs:
  - Add experience for lack of an offering.

* ScryingOrb/Experiences/FallbackExperience.cs:
  - Add experience for unrecognized offerings.

* ScryingOrb/Experiences/LuckyPurpleExperience.cs:
  - Add secret experience for the Mayor's shame.

* ScryingOrb/ModEntry.cs:
  - Implement interaction with the orb.
  - Add reset_orbs console command.

* ScryingOrb/ScryingOrb.csproj:
  - Add subdirectory for experiences.

* ScryingOrb/[JA]ScryingOrb/BigCraftables/ScryingOrb/big-craftable.xcf:
* ScryingOrb/[JA]ScryingOrb/BigCraftables/ScryingOrb/big-craftable.png:
  - Make the orb portion of the sprite larger.

* ScryingOrb/i18n/default.json:
  - Add strings for new experiences.

* PublicAccessTV/ModEntry.cs:
  - ResetChannels: Split console command to separate method. Add
    WorldReady check and exception handling.

* PublicAccessTV/Channel.cs:
* PublicAccessTV/i18n/default.json:
  - Refactoring.

* PublicAccessTV/PublicAccessTV.csproj:
* PublicAccessTV/Channels/MoviesChannel.cs:
* PublicAccessTV/Channels/TrainsChannel.cs:
* PublicAccessTV/Channels/NightEventsChannel.cs:
  - Move individual channels to subdirectory.

* ROADMAP:
  - Add intended config parameters.
  - Remove implemented UnlimitedExperience.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,2 +1,19 @@
 ﻿{
+  "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
+  "unlimited.following": "The orb still glows bright with the power of your earlier generous offering.",
+  "unlimited.topic.question": "What wisdom do you seek from the spirits?",
+  "unlimited.topic.garbage": "Garbage cans",
+  "unlimited.topic.geodes": "Geode contents",
+  "unlimited.topic.mining": "Mines and caverns",
+  "unlimited.topic.nightEvents": "Nighttime occurrences",
+  "unlimited.topic.shopping": "Shopping opportunities",
+  "unlimited.topic.itemFinder": "Seek a particular item",
+  "unlimited.topic.leave": "(Leave)",
+
+  "nothing.message": "The spirits wait patiently for an offering.",
+
+  "luckyPurple.initial": "The spirits are not amused.^The orb is not an underwear drawer!^Do not try that again.",
+  "luckyPurple.following": "The orb seems to peer back at you reproachfully.",
+
+  "fallback.message": "The spirits do not recognize your offering.",
 }
