--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -47,5 +47,5 @@
   "trains.next.thisWeek": "We don't have long to wait. This {{dayOfWeek}}, a train will pass through at {{time}}.",
   "trains.next.later": "Sorry, the next train won't pass through until {{date}} at {{time}}. We have to be patient.",
   "trains.later": "Looking further down the schedule, I see that trains are also scheduled to pass through on {{date1}} and {{date2}}.",
-  "trains.closing": "Remember that you'll probably miss the train if you've been away from the valley overnight. Happy trainspotting!"
+  "trains.closing": "Remember that you'll probably miss the train if you've been away from the valley overnight. Happy trainspotting!",
 }
