Add NightEventsExperience to ScryingOrb.
* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Add experience for scrying night events.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Enable nightEvents topic.
  - Use ConsumeOffering.
  - Shorten sound delay on following uses.
  - Use DelayedAction to allow other experiences to use afterQuestion.

* ScryingOrb/Experience.cs:
  - Add ConsumeOffering method.

* ScryingOrb/ModEntry.cs:
  - Enable NightEventsExperience.
  - Only respond to button presses if the player is free to interact.

* ScryingOrb/ScryingOrb.csproj:
  - Add NightEventsExperience.

* ScryingOrb/i18n/default.json:
  - Add strings for NightEventsExperience.

* ScryingOrb/[MFM]ScryingOrb/i18n/default.json:
  - Capitalize "Scrying Orb" like the object name.

* ScryingOrb/manifest.json:
  - Refactoring.

* ROADMAP:
  - Remove implemented NightEventsExperience.
  - Add NightEvents.FindItemByNightEvents.

--- a/ScryingOrb/[MFM]ScryingOrb/i18n/default.json
+++ b/ScryingOrb/[MFM]ScryingOrb/i18n/default.json
@@ -1,5 +1,5 @@
 ﻿{
   // letter sent by Welwick with crafting recipe
   "welwickRecipe.title": "Welwick's Instructions",
-  "welwickRecipe.text": "Salutations, young one.^^My colleague Rasmodius has spoken highly of your perception and intuition. I sense that you are ready to begin your own training in divination.^^Enclosed please find instructions for forging and enchanting a basic scrying orb. By making meaningful offerings to this conduit, you can query the voice of the spirits on sundry topics.^^I wish you the best of luck in your endeavors.^^   -Welwick, Diviner",
+  "welwickRecipe.text": "Salutations, young one.^^My colleague Rasmodius has spoken highly of your perception and intuition. I sense that you are ready to begin your own training in divination.^^Enclosed please find instructions for forging and enchanting a basic Scrying Orb. By making meaningful offerings to this conduit, you can query the voice of the spirits on sundry topics.^^I wish you the best of luck in your endeavors.^^   -Welwick, Diviner",
 }
