Add geode treasures experience to ScryingOrb.
* PredictiveCore/Geodes.cs:
  - Add class for predicting treasures from geodes.

* PredictiveCore/NightEvents.cs:
* PredictiveCore/Trains.cs:
  - Make limit uint instead of int.

* PredictiveCore/Utilities.cs:
  - Initialize Geodes class.
  - Add TODOs for other planned classes.

* PredictiveCore/PredictiveCore.projitems:
  - Include Geodes.cs.

* PublicAccessTV/PublicAccessTV.csproj:
  - Remove unneeded reference.

* ROADMAP:
  - Remove implemented items from Geodes and GeodesExperience.

* ScryingOrb/Experience.cs:
  - IsAvailable: Add virtual property.
  - Run: Add virtual method.
  - Try: Check whether IsAvailable too.
  - ShowAnimation: Fix alphaFade value.

* ScryingOrb/Experiences/GeodesExperience.cs:
  - Add experience for predicting treasures from geodes.

* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Say "Types" instead of "Subtopics" and "any" instead of
    "upcoming".
  - Include the closing message as an extra page of the main
    message.

* ScryingOrb/Experiences/NothingExperience.cs:
  - Check availability of experience, though it should never be a
    problem.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Say "Experiences" instead of "Topics".
  - List experiences in a logical order.
  - Omit unavailable experiences.
  - Instantiate experiences early for simplicity.

* ScryingOrb/ModEntry.cs:
  - Try GeodesExperience.
  - Reorder experiences logically.

* ScryingOrb/ScryingOrb.csproj:
  - Include GeodesExperience.cs.

* ScryingOrb/i18n/default.json:
  - geodes.*: Add messages for GeodesExperience.
  - unlimited.experience.*: Rename from unlimited.topic.* and
    reorder logically.
  - nightEvents.type.*: Rename from nightEvents.subtopic.*.
  - Tighten dialogue generally.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,33 +1,44 @@
 ﻿{
   "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
-  "unlimited.following": "The orb still glows bright with the power of your earlier generous offering.",
-  "unlimited.topic.question": "What wisdom do you seek from the spirits?",
-  "unlimited.topic.garbage": "Garbage cans",
-  "unlimited.topic.geodes": "Geode contents",
-  "unlimited.topic.mining": "Mines and caverns",
-  "unlimited.topic.nightEvents": "Nighttime occurrences",
-  "unlimited.topic.shopping": "Shopping opportunities",
-  "unlimited.topic.itemFinder": "Seek a particular item",
-  "unlimited.topic.leave": "(Leave)",
+  "unlimited.following": "The orb still glows bright with the power of your earlier offering.",
+  "unlimited.experience.question": "What wisdom do you seek from the spirits?",
+  "unlimited.experience.mining": "Mines and caverns",
+  "unlimited.experience.geodes": "Geode treasures",
+  "unlimited.experience.nightEvents": "Nocturnal occurrences",
+  "unlimited.experience.shopping": "Market offerings",
+  "unlimited.experience.garbage": "Garbage finds",
+  "unlimited.experience.itemFinder": "Seek a particular item",
+  "unlimited.experience.leave": "(Leave)",
 
   "nothing.message": "The spirits wait patiently for an offering.",
 
   "luckyPurple.initial": "The spirits are not amused.^The orb is not an underwear drawer!^Do not try that again.",
   "luckyPurple.following": "The orb seems to peer back at you reproachfully.",
 
-  "nightEvents.opening": "The spirits of the night accept your dark offering.",
-  "nightEvents.subtopic.question": "What occurrences do you wish to scry?",
-  "nightEvents.subtopic.upcoming": "Any imminent occurrences",
-  "nightEvents.subtopic.Fairy": "Visits from fairies",
-  "nightEvents.subtopic.Witch": "Flyovers by witches",
-  "nightEvents.subtopic.Meteorite": "Rocks raining from the heavens",
-  "nightEvents.subtopic.StrangeCapsule": "Visitors from other worlds",
-  "nightEvents.subtopic.StoneOwl": "Petrification of birds",
-  "nightEvents.subtopic.leave": "(Leave)",
+  "geodes.opening": "The spirits of the crystal spires accept your offering.",
+  "geodes.type.question": "Which strange rocks do you wish to peek inside?",
+  "geodes.type.any": "Next geode of any type",
+  "geodes.type.Regular": "Regular Geodes",
+  "geodes.type.Frozen": "Frozen Geodes",
+  "geodes.type.Magma": "Magma Geodes",
+  "geodes.type.Omni": "Omni Geodes",
+  "geodes.type.Trove": "Artifact Troves",
+  "geodes.type.leave": "(Leave)",
+  "geodes.closing.deeper": "Your journey to the depths of the mines is^incomplete, young one. Should you explore further,^these rocks may reveal different,^greater treasures.",
+
+  "nightEvents.opening": "The spirits of darkest night accept your offering.",
+  "nightEvents.type.question": "What nocturnal occurrences do you wish to scry?",
+  "nightEvents.type.any": "Any imminent occurrences",
+  "nightEvents.type.Fairy": "Visits from fairies",
+  "nightEvents.type.Witch": "Flyovers by witches",
+  "nightEvents.type.Meteorite": "Rocks raining from the heavens",
+  "nightEvents.type.StrangeCapsule": "Visitors from other worlds",
+  "nightEvents.type.StoneOwl": "Petrification of birds",
+  "nightEvents.type.leave": "(Leave)",
   "nightEvents.prediction.Earthquake": "> An earthquake may shake your town^  on {{date}}.",
   "nightEvents.prediction.Fairy": "> A fairy may visit your farm^  on {{date}}.",
   "nightEvents.prediction.Witch": "> A witch may fly over your farm^  on {{date}}.",
-  "nightEvents.prediction.Meteorite": "> A meteorite may fall from the sky^  on {{date}}.",
+  "nightEvents.prediction.Meteorite": "> A meteor may fall from the sky^  on {{date}}.",
   "nightEvents.prediction.StrangeCapsule": "> An extraterrestrial may crash on your planet^  on {{date}}.",
   "nightEvents.prediction.StoneOwl": "> A bird may be petrified on your farm^  on {{date}}.",
   "nightEvents.closing": "Know that the beings of shadow are capricious.^No occurrence can be foreseen with certainty.",
