Predict more geodes. Fix dialogue layouts.
* ScryingOrb/Experience.cs:
  - ShowMessage: Use ShowDialogues.
  - ShowDialogues: Add method to work around height estimation bug
    with multi-page dialogues.

* ScryingOrb/Experiences/GeodesExperience.cs:
  - Show three next geodes instead of one for "any", one per page.
  - Show 10 next geodes for all specific types, with appropriate
    headers.
  - Add a footer explaining the coin and star icons.
  - Use ShowDialogues to work around height estimation bug.

* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Use ShowDialogues to work around height estimation bug.

* ScryingOrb/i18n/default.json:
  - geodes.type.*: Reflect increased geode counts.
  - geodes.header.*: Add headers clarifying what is being listed.
  - geodes.footer: Add a footer explaining the coin and star icons.
  - geodes.closing.deeper: Adjust line breaks.

* PublicAccessTV/Channel.cs:
  - Fix terminology in comment.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -17,14 +17,23 @@
 
   "geodes.opening": "The spirits of the crystal spires accept your offering.",
   "geodes.type.question": "Which strange rocks do you wish to peek inside?",
-  "geodes.type.any": "Next geode of any type",
-  "geodes.type.Regular": "Regular Geodes",
-  "geodes.type.Frozen": "Frozen Geodes",
-  "geodes.type.Magma": "Magma Geodes",
-  "geodes.type.Omni": "Omni Geodes",
-  "geodes.type.Trove": "Artifact Troves",
+  "geodes.type.any": "Next three geodes of any type",
+  "geodes.type.Regular": "Next 10 Geodes",
+  "geodes.type.Frozen": "Next 10 Frozen Geodes",
+  "geodes.type.Magma": "Next 10 Magma Geodes",
+  "geodes.type.Omni": "Next 10 Omni Geodes",
+  "geodes.type.Trove": "Next 10 Artifact Troves",
   "geodes.type.leave": "(Leave)",
-  "geodes.closing.deeper": "Your journey to the depths of the mines is^incomplete, young one. Should you explore further,^these rocks may reveal different,^greater treasures.",
+  "geodes.header.any1": "The very next geode shall contain:^",
+  "geodes.header.any2": "The following geode will provide:^",
+  "geodes.header.any3": "The third next geode promises to reveal:^",
+  "geodes.header.Regular": "If they be regular Geodes, the next 10 geodes^cracked shall contain:^",
+  "geodes.header.Frozen": "If they be Frozen Geodes, the next 10 geodes^cracked will provide:^",
+  "geodes.header.Magma": "If they be Magma Geodes, the next 10 geodes^cracked promise to reveal:^",
+  "geodes.header.Omni": "If they be Omni Geodes, the next 10 geodes^cracked are sure to offer:^",
+  "geodes.header.Trove": "If they be Artifact Troves, the next 10 geodes^cracked shall manifest:^",
+  "geodes.footer": "^^$ treasures are deemed more valuable by mortals.^= treasures are sought by another in your village.",
+  "geodes.closing.deeper": "Your journey to the depths of the mines is^incomplete, young one. Should you explore further,^these rocks may reveal different, greater treasures.",
 
   "nightEvents.opening": "The spirits of darkest night accept your offering.",
   "nightEvents.type.question": "What nocturnal occurrences do you wish to scry?",
