Add GarbageChannel and GarbageExperience.
* PredictiveCore/Garbage.cs:
  - Add class to predict loot from garbage cans.

* PredictiveCore/Geodes.cs:
  - IsProgressDependent: Add property.

* PredictiveCore/PredictiveCore.projitems:
  - Include Garbage.cs.
  - FixZipAndDeploySafely: Remove .xcf files.

* PredictiveCore/Utilities.cs:
  - Initialize the Garbage class.

* PublicAccessTV/Channel.cs:
  - Remove outdated TODO item.

* PublicAccessTV/Channels/GarbageChannel.cs:
  - Add "In the Cans" channel hosted by Linus, announcing today's loot
    in garbage cans.

* PublicAccessTV/ModEntry.cs:
  - Instantiate GarbageChannel.

* PublicAccessTV/PublicAccessTV.csproj:
  - Include GarbageChannel.cs and garbage_backgrounds.{xcf,png}.

* PublicAccessTV/assets/garbage_backgrounds.png:
* PublicAccessTV/assets/garbage_backgrounds.xcf:
  - Add background tilesheet for GarbageChannel.

* PublicAccessTV/i18n/default.json:
  - Add messages for GarbageChannel.

* ROADMAP:
  - Remove implemented items in Garbage, GarbageChannel and
    GarbageExperience.
  - PublicAccessTV: Add item about host portrait legibility.
  - ScryingOrb: Add item about mystical glow.

* ScryingOrb/Experience.cs:
  - ShowDialogues: Work around width estimation bug.
  - ShowAnimation: Adjust position for taller animations.

* ScryingOrb/Experiences/GarbageExperience.cs:
  - Add experience for predicting loot from garbage cans. Still needs
    date picker.

* ScryingOrb/Experiences/GeodesExperience.cs:
  - Use IsProgressDependent and rename relevant closing string.
  - Fix comment.

* ScryingOrb/Experiences/LuckyPurpleExperience.cs:
  - Reduce fire animation to reasonable length.

* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Fix comment.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Add GarbageExperience.
  - Fix comments.

* ScryingOrb/ModEntry.cs:
  - Try a GarbageExperience.

* ScryingOrb/ScryingOrb.csproj:
  - Include GarbageExperience.

* ScryingOrb/i18n/default.json:
  - garbage.*: Add s

--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -7,6 +7,23 @@
 
   // Garbage ("In the Cans") - Linus
   "garbage.title": "In the Cans",
+  "garbage.opening": "Psst. Hi there {{playerName}}. It's your friend Linus here to let you know what you can expect in today's garbage.",
+  "garbage.none": "It looks like all the cans are empty today. Maybe we can forage in the woods instead.",
+  "garbage.can.SamHouse": "Let's check outside Jodi's house.",
+  "garbage.can.HaleyHouse": "What could Emily and Haley's can hold?",
+  "garbage.can.ManorHouse": "Mayor Lewis might have tossed something nice.",
+  "garbage.can.ArchaeologyHouse": "I love the library. Let's see what Gunther tossed.",
+  "garbage.can.Blacksmith": "You'll probably enjoy Clint's trash more than me.",
+  "garbage.can.Saloon": "Has Gus left something tasty for us?",
+  "garbage.can.JoshHouse": "I hope the Mullners have been baking again.",
+  "garbage.can.JojaMart": "The JojaMart makes me sad, but if we must...",
+  "garbage.can.MovieTheater": "This new movie theater could have something good.",
+  "garbage.item.garbageHat": "Wow, this lid is ready to see the world! It should make a lovely Garbage Hat.",
+  "garbage.item.special": "Oh, there's {{itemName}} here.",
+  "garbage.item.generic": "Just some {{itemName}} in here.",
+  "garbage.dishOfTheDay": "a hot meal",
+  "garbage.closing.standard": "I'll be back tomorrow with another look In the Cans. Let's keep this between you and me, okay?",
+  "garbage.closing.progress": "This is just what you're ready to find, though, young friend. Learn to listen to the cans and they'll have more to offer you.",
 
   // Mining ("Mining Advisory") - Marlon and Gil
   "mining.title": "Mining Advisory",
