PATV: BypassFriendships config; TV visual effects
* PublicAccessTV/ModEntry.cs:
  - Add BypassFriendships config option.

* PublicAccessTV/Channels/TrainsChannel.cs:
* PublicAccessTV/Channels/GarbageChannel.cs:
  - IsAvailable: Consider BypassFriendships config option.

* PublicAccessTV/assets/garbage_backgrounds.png:
* PublicAccessTV/assets/garbage_backgrounds.xcf:
* PublicAccessTV/assets/nightEvents_background.png:
* PublicAccessTV/assets/trains_background.png:
  - Add TV distortion and host drop shadow effects.

* PublicAccessTV/assets/trains_background.png:
  - Expand to 120x80 for consistency with other backgrounds.

* PublicAccessTV/assets/trains_background.xcf:
* PublicAccessTV/assets/nightEvents_background.xcf:
* PublicAccessTV/PublicAccessTV.csproj:
  - Include working files for more assets.

* PublicAccessTV/i18n/default.json:
  - garbage.closing.progress: Clarify wording.

* ROADMAP:
  - Remove implemented items for PublicAccessTV.
  - Specify which channel hosts need intro events.

--- a/PublicAccessTV/i18n/default.json
+++ b/PublicAccessTV/i18n/default.json
@@ -23,7 +23,7 @@
   "garbage.item.generic": "Just some {{itemName}} in here.",
   "garbage.dishOfTheDay": "a hot meal",
   "garbage.closing.standard": "I'll be back tomorrow with another look In the Cans. Let's keep this between you and me, okay?",
-  "garbage.closing.progress": "This is just what you're ready to find, though, young friend. Learn to listen to the cans and they'll have more to offer you.",
+  "garbage.closing.progress": "This is only what you're ready to find, young friend. Learn to listen to the cans and they'll have more to offer you.",
 
   // Mining ("Mining Advisory") - Marlon and Gil
   "mining.title": "Mining Advisory",
