Illuminate the Scrying Orb while it is in use.
* ScryingOrb/Experiences/GeodesExperience.cs:
* ScryingOrb/Experiences/GarbageExperience.cs:
* ScryingOrb/Experiences/NightEventsExperience.cs:
* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Add Illuminate/Extinguish.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Move GetExperiences into Run due to passing of Orb value.

* ScryingOrb/Experiences/LuckyPurpleExperience.cs:
  - Add special red Illuminate/Extinguish.

* ScryingOrb/Experience.cs:
  - Illuminate, Extinguish: Add methods to handle illumination of orb.
  - Monitor: Add proxy to ModEntry.
  - Try: Pass offering in Try call instead of constructor.
  - Run: Add generic public static version.
  - constructor: Preload the illumination texture.
  - Orb, Offering: Make properties public.
  - Try: Take an offering argument.
  - ShowAnimation: Return the sprite.

* PredictiveCore/Garbage.cs:
* ScryingOrb/Experiences/NothingExperience.cs:
* ScryingOrb/Experiences/FallbackExperience.cs:
  - Refactoring.

* ScryingOrb/ModEntry.cs:
  - Add orb_test_kit console command.
  - Make Monitor available to other classes.

* ScryingOrb/ScryingOrb.csproj:
* ScryingOrb/assets/illumination.png:
* ScryingOrb/assets/illumination.xcf:
  - Add animation for illuminated orb.

* ScryingOrb/[JA]ScryingOrb/BigCraftables/ScryingOrb/big-craftable.xcf:
  - Add layer for illumination.

* ScryingOrb/i18n/default.json:
  - unlimited.following: Fix to describe actual illumination behavior.

* ROADMAP:
  - Remove implemented item for ScryingOrb.
  - Add missing item for GarbageExperience.

--- a/ScryingOrb/i18n/default.json
+++ b/ScryingOrb/i18n/default.json
@@ -1,6 +1,6 @@
 ﻿{
   "unlimited.initial": "The spirits are most pleased by your generous offering. You may seek their counsel as much as you desire for the next week.",
-  "unlimited.following": "The orb still glows bright with the power of your earlier offering.",
+  "unlimited.following": "The orb glows bright with the power of your earlier offering.",
   "unlimited.experience.question": "What wisdom do you seek from the spirits?",
   "unlimited.experience.mining": "Mines and caverns",
   "unlimited.experience.geodes": "Geode treasures",
